# cr-train

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
examples/: benchmark_take_cache.py  bitmask_sampling_demo.py  colab_quickstart.ipynb  minimal_train.py  train_sen12mscr.py
scripts/: refresh_official_scene_splits.py
src/cr_train/: __init__.py  _parquet_streaming.py  data.py  progress.py  runtime.py  take_cache.py  trainer.py  trainer_reporting.py  trainer_runtime.py
src/cr_train/data/: __init__.py  constants.py  dataset.py  planning.py  runtime.py  source.py  store.py
src/cr_train/resources/: __init__.py  official_scene_splits.csv
tests/: test_data.py  test_examples.py  test_take_cache.py  test_trainer.py
