[project]
name = "cr-train"
version = "0.1.0"
description = "Streaming SEN12MS-CR training module with deterministic scene splits."
readme = "README.md"
authors = [
    { name = "dongju", email = "smturtle2@kakao.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "fsspec>=2026.2.0",
    "numpy>=1.26",
    "pyarrow>=23.0.0",
    "rich>=14.0.0",
    "torch>=2.4",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
