[project]
name = "cr-train"
version = "0.1.0"
description = "HF-first SEN12MS-CR training module with deterministic sampling."
readme = "README.md"
authors = [
    { name = "dongju", email = "smturtle2@kakao.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=23",
    "torch>=2.4",
    "tqdm>=4.66",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
