[project]
name = "cr-train"
version = "0.1.0"
description = "HF-first SEN12MS-CR training module with deterministic sampling."
readme = "README.md"
license = "MIT"
authors = [
    { name = "dongju", email = "smturtle2@kakao.com" }
]
keywords = ["satellite", "cloud-removal", "sen12ms-cr", "pytorch", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.12"
dependencies = [
    "datasets==4.7.0",
    "numpy>=1.26",
    "torch>=2.4",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/smturtle2/cr-train"
Repository = "https://github.com/smturtle2/cr-train"
Issues = "https://github.com/smturtle2/cr-train/issues"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
